--- a/app/src/main/res/layout/list_item_sweet_spot.xml
+++ b/app/src/main/res/layout/list_item_sweet_spot.xml
@@ -7,34 +7,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:src="@drawable/ic_launcher"
-        android:padding="4dp" />
+        android:padding="4dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is the title"
         android:id="@+id/sweetSpotListItemTitleTextView"
         android:textStyle="bold"
         android:textSize="22sp"
         android:paddingTop="4dp"
         android:maxLines="1"
         android:ellipsize="end"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/imageView"
         android:layout_toRightOf="@+id/imageView" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is a long description"
         android:id="@+id/sweetSpotListItemDescriptionTextView"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
         android:textSize="16sp"
         android:maxLines="1"
         android:ellipsize="end"
-        android:paddingBottom="4dp" />
+        android:paddingBottom="4dp"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_toRightOf="@+id/imageView" />
 </RelativeLayout>
