--- a/app/src/main/res/layout/list_item_sweet_spot.xml
+++ b/app/src/main/res/layout/list_item_sweet_spot.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/sweetSpotCreateImage"
         android:src="@drawable/ic_launcher"
         android:padding="4dp"
         android:layout_centerVertical="true"
@@ -22,8 +22,8 @@
         android:paddingTop="4dp"
         android:maxLines="1"
         android:ellipsize="end"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView" />
+        android:layout_alignTop="@+id/sweetSpotCreateImage"
+        android:layout_toRightOf="@+id/sweetSpotCreateImage" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,6 +33,6 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:paddingBottom="4dp"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView" />
+        android:layout_alignBottom="@+id/sweetSpotCreateImage"
+        android:layout_toRightOf="@+id/sweetSpotCreateImage" />
 </RelativeLayout>
