--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -16,13 +16,21 @@
         android:autoText="false"
         android:gravity="center_horizontal" />
 
-    <ImageView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sweetSpotDetailsImage"
-        android:src="@drawable/ic_launcher"
-        android:layout_weight="0.76"
-        android:padding="10dp" />
+        android:background="#ccc"
+        android:padding="3dp"
+        android:id="@+id/sweetSpotDetailsImageFrame">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sweetSpotDetailsImage"
+            android:background="@drawable/ic_action_picture"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
 
     <TextView
         android:layout_width="match_parent"
