--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -27,6 +27,7 @@
                 android:background="#ccc"
                 android:padding="3dp"
                 android:id="@+id/sweetSpotCreateImageFrame">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -47,7 +48,7 @@
             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Save"
+                android:text="@string/save"
                 android:id="@+id/sweetSpotCreateSaveButton" />
 
         </LinearLayout>
