--- a/app/src/main/res/layout/list_item_sweet_spot.xml
+++ b/app/src/main/res/layout/list_item_sweet_spot.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:padding="4dp">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sweetSpotCreateImage"
-        android:src="@drawable/ic_launcher"
-        android:padding="4dp"
+
+    <FrameLayout
+        android:id="@+id/sweetSpotListItemFrameLayout"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="#ccc"
+        android:padding="3dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/sweetSpotListItemImageView"
+            android:src="@drawable/ic_launcher" />
+
+    </FrameLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,11 +30,14 @@
         android:id="@+id/sweetSpotListItemTitleTextView"
         android:textStyle="bold"
         android:textSize="22sp"
-        android:paddingTop="4dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:maxLines="1"
         android:ellipsize="end"
-        android:layout_alignTop="@+id/sweetSpotCreateImage"
-        android:layout_toRightOf="@+id/sweetSpotCreateImage" />
+        android:layout_toEndOf="@+id/sweetSpotListItemFrameLayout"
+        android:layout_alignTop="@+id/sweetSpotListItemFrameLayout"
+        android:layout_toRightOf="@+id/sweetSpotListItemFrameLayout"
+        android:layout_alignParentTop="false" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,7 +46,9 @@
         android:textSize="16sp"
         android:maxLines="1"
         android:ellipsize="end"
-        android:paddingBottom="4dp"
-        android:layout_alignBottom="@+id/sweetSpotCreateImage"
-        android:layout_toRightOf="@+id/sweetSpotCreateImage" />
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:layout_alignBottom="@+id/sweetSpotListItemFrameLayout"
+        android:layout_toRightOf="@+id/sweetSpotListItemFrameLayout"
+        android:layout_toEndOf="@+id/sweetSpotListItemFrameLayout" />
 </RelativeLayout>
