--- a/app/src/main/res/layout/list_item_sweet_spot.xml
+++ b/app/src/main/res/layout/list_item_sweet_spot.xml
@@ -18,8 +18,7 @@
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/sweetSpotListItemImageView"
-            android:src="@drawable/ic_launcher" />
+            android:id="@+id/sweetSpotListItemImageView" />
 
     </FrameLayout>
 
