--- a/app/src/main/res/menu/details.xml
+++ b/app/src/main/res/menu/details.xml
@@ -1,6 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ListActivity" >
+    <item android:id="@+id/action_remove"
+        android:icon="@drawable/ic_action_remove"
+        android:title="@string/remove"
+        android:showAsAction="ifRoom"/>
     <item android:id="@+id/action_map"
         android:icon="@drawable/ic_action_map"
         android:title="@string/view_map"
