--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -11,8 +11,9 @@
         android:layout_height="wrap_content">
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical" android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -21,7 +22,6 @@
                     android:textSize="26sp"
                     android:ellipsize="middle"
                     android:padding="6dp"
-                    android:autoText="false"
                     android:gravity="center_horizontal"
                     android:textStyle="bold" />
 
@@ -47,6 +47,7 @@
                     android:id="@+id/sweetSpotDetailsDescription"
                     android:textStyle="italic"
                     android:padding="6dp" />
+
             </LinearLayout>
 
     </ScrollView>
